QA Latest Data/main/default/objects/Account/fields/Account_Location__c.field-meta.xml
<CustomField>
    <fullName>Account_Location__c</fullName>
    <formula>IMAGE(

&quot;https://maps.googleapis.com/maps/api/staticmap?center=&quot; + BillingStreet + &quot;,&quot; + BillingCity + &quot;,&quot; + BillingState +&quot; &amp;zoom=13&amp;size=650x250&amp;markers=color:red|&quot; + BillingStreet + &quot;,&quot; + BillingCity + &quot;,&quot; + BillingState + &quot;&amp;sensor=true&quot;





, &quot;no map available&quot;, 250, 650)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Location</label>
    <type>Text</type>
</CustomField>