QA Latest Data/main/default/objects/Account/fields/Active_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Active_Certifications__c</fullName>
    <label>Active Certifications</label>
    <summaryFilterItems>
        <field>Trade_Ally_Certification__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Trade_Ally_Certification__c.Trade_Ally__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>