QA Latest Data/main/default/objects/Account/fields/Active_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Active_Licenses__c</fullName>
    <label>Active Licenses</label>
    <summaryFilterItems>
        <field>Trade_Ally_License__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Trade_Ally_License__c.Trade_Ally__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>