QA Latest Data/main/default/objects/Account/fields/Active_Specialties__c.field-meta.xml
<CustomField>
    <fullName>Active_Specialties__c</fullName>
    <label>Active Specialties</label>
    <summaryForeignKey>Trade_Ally_Specialty__c.Trade_Ally__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>