QA Latest Data/main/default/objects/Account/fields/Active_Territory_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Active_Territory_Assignments__c</fullName>
    <label>Active Territory Assignments</label>
    <summaryForeignKey>Territory_Assignment__c.Trade_Ally__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>