QA Latest Data/main/default/objects/Account/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <defaultValue>Today() +0</defaultValue>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>