QA Latest Data/main/default/objects/Account/fields/Approved_Application__c.field-meta.xml
<CustomField>
    <fullName>Approved_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Application</label>
    <type>Checkbox</type>
</CustomField>