QA Latest Data/main/default/objects/Account/fields/Approved_Programs__c.field-meta.xml
<CustomField>
    <fullName>Approved_Programs__c</fullName>
    <label>Approved Programs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prescriptive</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>