QA Latest Data/main/default/objects/Account/fields/Billing_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_2__c</fullName>
    <label>Billing Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>