QA Latest Data/main/default/objects/Account/fields/Billing_Address_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Latitude__c</fullName>
    <formula>BillingLatitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address Latitude</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>