QA Latest Data/main/default/objects/Account/fields/Billing_Address_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Longitude__c</fullName>
    <formula>BillingLongitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address Longitude</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>