QA Latest Data/main/default/objects/Account/fields/Blank_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Blank_Referrals__c</fullName>
    <label>Blank Referrals</label>
    <summaryFilterItems>
        <field>Trade_Ally_Referral__c.Referral_Status__c</field>
        <operation>equals</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Trade_Ally_Referral__c.Trade_Ally__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>