QA Latest Data/main/default/objects/Account/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Trade Pro</fullName>
            </value>
            <value>
                <fullName>Contracted Vendor</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Retrofit</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
                <isActive>false</isActive>
                <label>Consultant</label>
            </value>
            <value>
                <fullName>Design-Build Firm</fullName>
                <isActive>false</isActive>
                <label>Design-Build Firm</label>
            </value>
            <value>
                <fullName>Distribution / Wholesaler</fullName>
                <isActive>false</isActive>
                <label>Distribution / Wholesaler</label>
            </value>
            <value>
                <fullName>Energy Managment / DR</fullName>
                <isActive>false</isActive>
                <label>Energy Managment / DR</label>
            </value>
            <value>
                <fullName>Engineering Services</fullName>
                <isActive>false</isActive>
                <label>Engineering Services</label>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
                <isActive>false</isActive>
                <label>Manufacturing</label>
            </value>
            <value>
                <fullName>Retailer</fullName>
                <isActive>false</isActive>
                <label>Retailer</label>
            </value>
            <value>
                <fullName>Supplier</fullName>
                <isActive>false</isActive>
                <label>Supplier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>