QA Latest Data/main/default/objects/Account/fields/Child_Account_Count__c.field-meta.xml
<CustomField>
    <fullName>Child_Account_Count__c</fullName>
    <label>Child Account Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>