QA Latest Data/main/default/objects/Account/fields/Consumer_Facing_Lang_Spoke__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Facing_Lang_Spoke__c</fullName>
    <label>Consumer Facing Lang Spoke</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>