QA Latest Data/main/default/objects/Account/fields/Date_Incorporated__c.field-meta.xml
<CustomField>
    <fullName>Date_Incorporated__c</fullName>
    <label>Date Incorporated / Established</label>
    <type>Date</type>
</CustomField>