QA Latest Data/main/default/objects/Account/fields/Date_Of_Last_Referral__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Last_Referral__c</fullName>
    <label>Date Of Last Referral</label>
    <summarizedField>Trade_Ally_Referral__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Trade_Ally_Referral__c.Trade_Ally__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>