QA Latest Data/main/default/objects/Account/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <label>Company Email Address</label>
    <type>Email</type>
</CustomField>