QA Latest Data/main/default/objects/Account/fields/Enable_External_Integration__c.field-meta.xml
<CustomField>
    <fullName>Enable_External_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this checkbox is checked, TA account will be synced back to DSMC.</description>
    <label>Enable external integration?</label>
    <type>Checkbox</type>
</CustomField>