QA Latest Data/main/default/objects/Account/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>External Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>