QA Latest Data/main/default/objects/Account/fields/Federal_Tax_Id_Number__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_Id_Number__c</fullName>
    <label>Federal Tax Id Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>