QA Latest Data/main/default/objects/Account/fields/If_other_Please_describe__c.field-meta.xml
<CustomField>
    <fullName>If_other_Please_describe__c</fullName>
    <label>If other, Please describe</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>