QA Latest Data/main/default/objects/Account/fields/Number_Of_Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Active_Users__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Active Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>