QA Latest Data/main/default/objects/Account/fields/Number_Of_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Referrals__c</fullName>
    <label>Number Of Referrals</label>
    <summaryForeignKey>Trade_Ally_Referral__c.Trade_Ally__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>