QA Latest Data/main/default/objects/Account/fields/Other_Business_Structure__c.field-meta.xml
<CustomField>
    <fullName>Other_Business_Structure__c</fullName>
    <label>If other, Please describe</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>