QA Latest Data/main/default/objects/Account/fields/Participating_Programs__c.field-meta.xml
<CustomField>
    <fullName>Participating_Programs__c</fullName>
    <label>Participating Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prescriptive</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>