QA Latest Data/main/default/objects/Account/fields/President_Owner_of_Company__c.field-meta.xml
<CustomField>
    <fullName>President_Owner_of_Company__c</fullName>
    <label>Principal/President/Owner of Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>