QA Latest Data/main/default/objects/Account/fields/Primary_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Type__c</fullName>
    <description>The application type that is being selected while signing up.</description>
    <inlineHelpText>The application type that is being selected while signing up.</inlineHelpText>
    <label>Application Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>