QA Latest Data/main/default/objects/Account/fields/Projects_Completed__c.field-meta.xml
<CustomField>
    <fullName>Projects_Completed__c</fullName>
    <label>Projects Completed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>