QA Latest Data/main/default/objects/Account/fields/Referral_Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Referral_Eligibility_Status__c</fullName>
    <label>Referral Eligibility Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REP Suspended Referrals</fullName>
            </value>
            <value>
                <fullName>No Eligible Programs</fullName>
            </value>
            <value>
                <fullName>Auto Insurance Expired</fullName>
            </value>
            <value>
                <fullName>Unresolved Unreported Business</fullName>
            </value>
            <value>
                <fullName>Unresolved Complaints</fullName>
            </value>
            <value>
                <fullName>Unresolved Verifications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>