QA Latest Data/main/default/objects/Account/fields/Referral_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Referral_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Eligible</label>
    <type>Checkbox</type>
</CustomField>