QA Latest Data/main/default/objects/Account/fields/Registration_Code__c.field-meta.xml
<CustomField>
    <fullName>Registration_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Registration Сode</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>