QA Latest Data/main/default/objects/Account/fields/Residential_Programs__c.field-meta.xml
<CustomField>
    <fullName>Residential_Programs__c</fullName>
    <label>Residential Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TEST VALUE 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>