QA Latest Data/main/default/objects/Account/fields/Search_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Search_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contract can be searched in Find Trade Ally</description>
    <label>Search Enabled</label>
    <type>Checkbox</type>
</CustomField>