QA Latest Data/main/default/objects/Account/fields/Sectors__c.field-meta.xml
<CustomField>
    <fullName>Sectors__c</fullName>
    <label>Sectors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>