QA Latest Data/main/default/objects/Account/fields/Suspend_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Suspend_Referrals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspend Referrals</label>
    <type>Checkbox</type>
</CustomField>