QA Latest Data/main/default/objects/Account/fields/Throttle_Limit__c.field-meta.xml
<CustomField>
    <fullName>Throttle_Limit__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Throttle Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>