QA Latest Data/main/default/objects/Account/fields/User_Limit__c.field-meta.xml
<CustomField>
    <fullName>User_Limit__c</fullName>
    <label>User Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>