QA Latest Data/main/default/objects/Account/fields/VAT_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>VAT_Registration_No__c</fullName>
    <description>UKPN Specific Field for Demo</description>
    <label>VAT Registration No</label>
    <length>11</length>
    <type>Text</type>
</CustomField>