QA Latest Data/main/default/objects/Account/fields/Year_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Registration__c</fullName>
    <description>UKPN Specific Field for Demo</description>
    <label>Year of Registration</label>
    <length>4</length>
    <type>Text</type>
</CustomField>