QA Latest Data/main/default/objects/Account/recordTypes/Utility_Corporate_Entity.recordType-meta.xml
<RecordType>
    <fullName>Utility_Corporate_Entity</fullName>
    <active>true</active>
    <label>Utility Corporate Entity</label>
</RecordType>