QA Latest Data/main/default/objects/Account/recordTypes/Utility_Customer_Site.recordType-meta.xml
<RecordType>
    <fullName>Utility_Customer_Site</fullName>
    <active>true</active>
    <label>Utility Customer Site</label>
</RecordType>