QA Latest Data/main/default/objects/Account/validationRules/Check_State_Validity.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_State_Validity</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( 
OR( 
LEN(BillingState) &lt; 2, 
NOT( 
CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:&quot; 
&amp; 
&quot;IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:&quot; 
&amp; 
&quot;NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:&quot; 
&amp; 
&quot;WA:WV:WI:WY&quot;, BillingState) 
)))</errorConditionFormula>
    <errorMessage>Account Billing State is invalid</errorMessage>
</ValidationRule>