QA Latest Data/main/default/objects/Account/listViews/Active_Trade_Allies.listView-meta.xml
<ListView>
    <fullName>Active_Trade_Allies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.URL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Trade Allies</label>
</ListView>