QA Latest Data/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Number_Of_Active_Users__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Tier_Level__c</columns>
    <columns>Search_Enabled__c</columns>
    <columns>Contract_Signed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Companies</label>
</ListView>