QA Latest Data/main/default/objects/Account/listViews/Tier_2.listView-meta.xml
<ListView>
    <fullName>Tier_2</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tier_Level__c</field>
        <operation>equals</operation>
        <value>Tier 2</value>
    </filters>
    <label>Tier 2</label>
</ListView>